[gd_scene load_steps=7 format=3 uid="uid://61fju0pje8ly"]

[ext_resource type="Script" path="res://blackjack/blackjack.gd" id="1_qlfid"]
[ext_resource type="Texture2D" uid="uid://b2ndu8r1f6svv" path="res://blackjack/table_red.png" id="2_f2j16"]
[ext_resource type="AudioStream" uid="uid://cxocnyh2pd6lr" path="res://blackjack/card-place-3.mp3" id="3_jiue7"]

[sub_resource type="LabelSettings" id="LabelSettings_q38sp"]
font_size = 24
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ox0yq"]
font_size = 24
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_61h7s"]
font_size = 64
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="Blackjack" type="Node"]
script = ExtResource("1_qlfid")

[node name="TableRed" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_f2j16")
metadata/_edit_lock_ = true

[node name="Dealer" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -73.0
offset_right = 44.5
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
text = "DEALER"
label_settings = SubResource("LabelSettings_q38sp")

[node name="Player" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = 23.0
offset_right = 43.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAYER"
label_settings = SubResource("LabelSettings_ox0yq")

[node name="PlayButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -26.0
offset_right = 70.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "Play!"

[node name="ReturnButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -558.0
offset_top = -105.0
offset_right = -428.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
text = "Return"

[node name="HitButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -15.0
offset_right = -40.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Hit"

[node name="StandButton" type="Button" parent="."]
visible = false
offset_left = 614.0
offset_top = 309.0
offset_right = 687.0
offset_bottom = 340.0
text = "Stand"

[node name="EndGameLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -295.0
offset_right = 149.0
offset_bottom = -207.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_61h7s")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jiue7")
volume_db = -6.0

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="HitButton" to="." method="_on_hit_button_pressed"]
[connection signal="pressed" from="StandButton" to="." method="_on_stand_button_pressed"]
